--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,39 +1,47 @@
+
 header {
   background: var(--qwik-purple);
+  border-bottom: 5px solid var(--qwik-dark-purple);
+  padding-block: 10px 10px;
 }
-header {
+button {
+  height: 25px;
+  border: none;
+  font-size: 15px;
+  background-color: #fff;
+}
+button:hover{
+  background-color: #fdfdfd7e;
+}
+header .container{
   display: flex;
-  background: white;
-  border-bottom: 10px solid var(--qwik-dark-purple);
+  flex-direction: column;
+  align-items: center;
 }
-
-header .logo a {
-  display: inline-block;
-  padding: 10px 10px 7px 20px;
+header nav {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 2px;
 }
-header h2{
-  padding: 35px 10px;
-}
-header ul {
-  margin: 0;
-  padding: 3px 10px 0 0;
-  list-style: none;
-  flex: 1;
-  text-align: right;
-}
-
-header li {
-  display: inline-block;
-  margin: 0;
-  padding: 0;
-}
-
-header li a {
-  display: inline-block;
-  padding: 35px 10px;
+header a{
   text-decoration: none;
+  font-weight: bold;
+  padding: 3px 7px;
+  text-align: center;
+}
+header img {
+  display: flex;
 }
 
-header li a:hover {
-  text-decoration: underline;
+@media screen and (min-width: 720px){
+  header {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  header nav {
+    flex-direction: row;
+    padding-bottom: 15px;
+    padding-right: 20px;
+  }
 }
