--- a/src/css/global.css
+++ b/src/css/global.css
@@ -12,73 +12,49 @@
   --qwik-light-purple: #ac7ff4;
   --qwik-dark-purple: #713fc2;
 }
-
 body {
   background-color: #fafafa;
   font-family: 'Poppins', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
-  padding: 20px 20px 40px 20px;
   background-color: grey;
+  border-bottom: black;
 }
-
 main {
-  max-width: 760px;
-  margin: 0 auto;
+  max-width: 800px;
+  margin:  auto;
   background-color: white;
-  border-radius: 5px;
-  box-shadow: 0px 0px 130px -50px var(--qwik-light-purple);
   overflow: hidden;
+  border-bottom: 5px solid var(--qwik-dark-purple);
 }
-
-h1,
 h2 {
   margin: 0 0 5px 0;
 }
-
 .lightning {
   filter: hue-rotate(180deg);
 }
-
-section {
-  padding: 20px;
-  border-bottom: 10px solid var(--qwik-dark-blue);
-}
-
 ul {
   list-style-type: square;
   margin: 5px 0 30px 0;
   padding-left: 25px;
 }
-
-li {
-  padding: 5px 0;
-}
-
 li::marker {
   color: var(--qwik-light-blue);
 }
-
-a,
 a:visited {
   color: var(--qwik-dark-blue);
 }
-
 a:hover {
   text-decoration: none;
 }
-
 table.commands {
   margin: 0 0 30px 0;
 }
-
 .commands td {
   padding: 5px;
 }
-
 .commands td:first-child {
   white-space: nowrap;
   padding-right: 20px;
 }
-
 code {
   font-family: Menlo, Monaco, Courier New, monospace;
   font-size: 0.9em;
@@ -87,21 +63,16 @@ code {
   border-radius: 3px;
   border-bottom: 2px solid #bfbfbf;
 }
-
 footer {
-  padding: 15px;
   text-align: center;
-  font-size: 0.8em;
+  
 }
-
 footer a {
   text-decoration: none;
 }
-
 footer a:hover {
-  text-decoration: underline;
+  text-decoration: dashed;
 }
-
 a.mindblow {
   margin: 0 auto;
   display: block;
@@ -118,9 +89,116 @@ a.mindblow {
       16 0,
     auto; /*!emojicursor.app*/
 }
-
 a.mindblow:hover {
   border-bottom-width: 0px;
   margin-bottom: 4px;
   transform: translateY(4px);
+}
+/**------------------FirstComponent-------*/
+.FirstComponent{
+  text-align: center;
+}
+/**------------------About-------*/
+.About li{
+  padding: 5px 0;
+}
+.About h1 {
+  text-align: center;
+}
+
+/**------------------Food-------*/
+.Food {
+  text-align: center;
+  font-size: 18px;
+}
+.Food img {
+  padding: 0 23%;
+}
+.Food hr {
+  font-size: 10px;
+}
+/**------------------WatchTutor-------*/
+.Watch {
+  text-align: center;
+  font-size: 25px;
+  color: #ac7ff4;
+}
+.Watch button {
+  height: 30px;
+  background-color: black;
+}
+.Watch span {
+  color: #fff;
+}
+.Watch button:hover {
+  background-color: rgba(148, 141, 141, 0.432);
+}
+/**------------------Dummy Component-------*/
+.Dummy p {
+  text-align: center;
+  font-size: 25px;
+}
+.Dummy img {
+  padding: 0px 23%;
+}
+/**------------------Prueba Css Grid-------*/
+.contenedor {
+  width: 90%;
+    max-width: 1000px;
+    margin: 20px auto;
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, auto);
+    grid-template-areas: 
+                         "contenido contenido sidebar"
+                         "widget-1 widget-2 sidebar";
+                        
+}
+.contenedor > div,
+.contenedor .contenido,
+.contenedor .header,
+.contenedor .sidebar,
+.contenedor .footer{
+    background: #fff;
+    padding: 20px;
+    border-radius: 4px;
+}
+.contenedor .contenido{
+    grid-area: contenido;
+}
+.contenedor .sidebar{
+    grid-column: 3 / 4;
+    background: #faa43d;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100px;
+    grid-area: sidebar;
+}
+.contenedor .widget-1,
+.contenedor .widget-2{
+    background: #55a8fd;
+    color: #fff;
+    height: 100px;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.contenedor .widget-1{
+    grid-area: widget-1;
+}
+.contenedor .widget-2{
+    grid-area: widget-2;
+}
+@media screen and (max-width: 780px){
+    .contenedor{
+        grid-template-areas: 
+                             "contenido contenido contenido"
+                             "sidebar sidebar sidebar"
+                             "widget-1 widget-1 widget-2";
+                             
+}
 }
